# Inventory-Manager-For-Game-Collectors

./: README.md  inventory_data.csv  inventory_data.json  main.py  pyproject.toml  requirements.txt  run_gui.py
inventory_scraper/: BACKUPstorage.py  __init__.py  im4gcCLI.py  im4gcGUI.py  scraper.py  storage.py
