[project]
name = "inventory-management-for-game-collectors"
version = "0.1.0"
description = "A Python app for scraping video game prices and managing inventory."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Inventory App" }
]
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.13",
  "selenium>=4.15",
  "webdriver-manager>=4.0"
]

[project.scripts]
inventory-manager = "main:main"
inventory-manager-gui = "run_gui:main"
